grammar.js
    lilypond: $ => repeat($._top_level_expression),

    _top_level_expression: $ => choice(
      $.version_statement,
      $.header_block,
      $.book_block,
      $.bookpart_block,
      $.score_block,
      $.paper_block,
      $.layout_block,
      $.midi_block,
      $.assignment,
      $.music,
      $.simultaneous_music,
      $.context_expression,
      $.repeat_expression,
      $.music_function,
      $.markup,
      $.lyric_mode,
      $.addlyrics,
      $.lyricsto,
      $.figure_mode,
      $.chord_mode,
      $.partial,
      $.embedded_scm,
      $.comment,
    ),

    // Comments

    comment: $ => choice(
      $.line_comment,
      $.block_comment,
    ),

    line_comment: $ => token(seq('%', /[^{\n][^\n]*/)),

    version_statement: $ => seq(
      '\\version',
      alias($.string, $.version_number),
    ),

    // Header

    header_block: $ => seq(
      '\\header',
      '{',
      repeat($._header_body),
      '}',
    ),

    _header_body: $ => choice(
      $.assignment,
      $.embedded_scm,
      $.comment,
    ),

    // Book structure

    assignment: $ => seq(
      $.assignment_id,
      '=',
      $._identifier_init,
    ),

    assignment_id: $ => choice(
      $.symbol,
      $.string,
    ),

    _identifier_init: $ => choice(
      $.string,
      $.number_expression,
      $.music,
      $.simultaneous_music,
      $.context_expression,
      $.repeat_expression,
      $.music_function,
      $.embedded_scm,
    ),

    // Number expressions

    unsigned: $ => /[0-9]+/,
    fraction: $ => /[0-9]+\/[0-9]+/,
    string: $ => /"([^"\\]|\\.)*"/,
    symbol: $ => /[a-zA-Z][a-zA-Z0-9_-]*/,

    // Embedded Scheme

    embedded_scm: $ => seq(
      '#',
      choice(
        $.scheme_boolean,
        $.scheme_number,
        $.scheme_symbol,
        $.scheme_string,
        $.scheme_list,
        $.symbol,  // bare symbol like #red
      ),
    ),

    scheme_number: $ => choice($.unsigned, $.real, $.fraction),
    scheme_symbol: $ => seq("'", $.symbol),
    scheme_string: $ => $.string,
    scheme_list: $ => seq(
      choice("'(", '('),
      repeat($._scheme_element),
      ')',
    ),

    _scheme_element: $ => choice(
      $.scheme_boolean,
      $.scheme_number,
      $.scheme_symbol,
      $.scheme_string,
      $.scheme_list,
      $.symbol,
    ),

    // Markup

    markup: $ => seq(
      '\\markup',
      $._markup_body,
    ),

    _markup_body: $ => choice(
      $.markup_block,
      $.markup_command,
      $.markup_word,
      $.string,
    ),

    markup_block: $ => seq(
      '{',
      repeat($._markup_element),
      '}',
    ),

    _markup_element: $ => choice(
      $.markup_command,
      $.markup_word,
      $.string,
      $.markup_block,
      $.embedded_scm,
    ),

    markup_command: $ => prec.right(seq(
      $.markup_command_name,
      repeat($._markup_argument),
    )),

    markup_command_name: $ => choice(
      '\\bold', '\\italic', '\\underline',
      '\\box', '\\circle', '\\oval',
      '\\concat', '\\column', '\\line', '\\center-column',
      '\\fontsize', '\\abs-fontsize', '\\magnify',
      '\\raise', '\\lower', '\\translate',
      '\\super', '\\sub', '\\caps', '\\smallCaps',
      '\\huge', '\\large', '\\normalsize', '\\small', '\\tiny', '\\teeny',
      '\\hspace', '\\vspace',
      '\\combine', '\\pad-around',
      '\\fill-line', '\\justify', '\\wordwrap',
      '\\note', '\\note-by-number',
      '\\sharp', '\\flat', '\\natural',
      '\\dynamic',
    ),

    _markup_argument: $ => choice(
      $.string,
      $.markup_block,
      $.markup_command,
      $.number_expression,
      $.embedded_scm,
    ),

    markup_word: $ => /[^\s{}\\#"]+/,

    // Lyrics

    lyric_mode: $ => seq(
      choice('\\lyricmode', '\\lyrics'),
      optional($.context_modification),
      $._lyric_body,
    ),

    _lyric_body: $ => $.lyric_block,

    lyric_block: $ => seq(
      '{',
      repeat($._lyric_element),
      '}',
    ),

    _lyric_element: $ => choice(
      $.lyric_word,
      $.lyric_extender,
      $.lyric_hyphen,
      $.lyric_skip,
      $.duration,
      $.string,
      $.comment,
    ),

    lyric_word: $ => /[a-zA-Z][a-zA-Z0-9']*/,
    lyric_extender: $ => '__',
    lyric_hyphen: $ => '--',

    addlyrics: $ => seq(
      '\\addlyrics',
      optional($.context_modification),
      $._lyric_body,
    ),

    lyricsto: $ => seq(
      '\\lyricsto',
      choice($.string, $.symbol),
      $._lyric_body,
    ),

    // Figured bass

    figure_mode: $ => seq(
      choice('\\figuremode', '\\figures'),
      optional($.context_modification),
      $.figure_block,
    ),

    figure_block: $ => seq(
      '{',
      repeat($._figure_element),
      '}',
    ),

    _figure_element: $ => choice(
      $.figure_group,
      $.figure_rest,
      $.figure_skip,
      $.comment,
    ),

    figure_group: $ => seq(
      '<',
      repeat($.figure),
      '>',
      optional($.duration),
    ),

    figure: $ => seq(
      choice(
        $.figure_number,
        '_',
      ),
      repeat($.figure_modifier),
    ),

    figure_number: $ => /[0-9]+/,

    figure_modifier: $ => choice(
      '+',
      '\\+',
      '!',
      '\\!',
      '[',
      ']',
    ),

    // Chord mode

    chord_mode: $ => seq(
      choice('\\chordmode', '\\chords'),
      optional($.context_modification),
      $.chord_body_block,
    ),

    chord_body_block: $ => seq(
      '{',
      repeat($._chord_body_element),
      '}',
    ),

    _chord_body_element: $ => choice(
      $.chord_name,
      $.rest,
      $.skip,
      $.comment,
    ),

    chord_name: $ => seq(
      $.pitch,
      optional($.chord_quality),
      optional($.chord_inversion),
      optional($.duration),
    ),

    chord_quality: $ => prec.right(seq(
      ':',
      repeat1($.chord_modifier),
    )),

    chord_modifier: $ => choice(
      // Chord intervals - only common ones
      '3', '5', '6', '7', '9', '11', '13',
      'maj',
      'min',
      'm',
      'dim',
      'aug',
      'sus',
      '+',
      '-',
      '^',
    ),

    chord_inversion: $ => seq(
      '/',
      $.pitch,
    ),

    // Time, Key, Clef

    time_signature: $ => seq(
      '\\time',
      $.fraction,
    ),

    key_signature: $ => seq(
      '\\key',
      $.pitch,
      $.key_mode,
    ),

    key_mode: $ => choice(
      '\\major', '\\minor',
      '\\ionian', '\\dorian', '\\phrygian', '\\lydian',
      '\\mixolydian', '\\aeolian', '\\locrian',
    ),

    clef: $ => seq(
      '\\clef',
      choice($.clef_name, $.string),
    ),

    clef_name: $ => choice(
      'treble', 'bass', 'alto', 'tenor',
      'soprano', 'mezzosoprano', 'baritone',
      'varbaritone', 'subbass', 'french',
      'percussion', 'tab', 'moderntab',
    ),

    partial: $ => seq(
      '\\partial',
      $.duration,
    ),

    // Grace Notes

    grace: $ => seq(
      '\\grace',
      $._contextable_music,
    ),

    acciaccatura: $ => seq(
      '\\acciaccatura',
      $._contextable_music,
    ),

    appoggiatura: $ => seq(
      '\\appoggiatura',
      $._contextable_music,
    ),

    // Tuplets

    tuplet: $ => seq(
      '\\tuplet',
      $.fraction,
      optional($.duration),
      $._contextable_music,
    ),

    times: $ => seq(
      '\\times',
      $.fraction,
      $._contextable_music,
    ),

    // Bar Lines and Navigation

    bar_check: $ => seq(
      '\\bar',
      $.string,
    ),

    tempo: $ => choice(
      seq('\\tempo', $.duration, '=', $.unsigned),
      seq('\\tempo', $.string, optional(seq($.duration, '=', $.unsigned))),
    ),

    segno: $ => '\\segno',
    coda: $ => '\\coda',
    fine: $ => '\\fine',

    mark: $ => seq(
      '\\mark',
      choice($.unsigned, $.string, '\\default'),
    ),

    // Direction Overrides

    direction_command: $ => choice(
      '\\stemUp', '\\stemDown', '\\stemNeutral',
      '\\slurUp', '\\slurDown', '\\slurNeutral',
      '\\tieUp', '\\tieDown', '\\tieNeutral',
      '\\phrasingSlurUp', '\\phrasingSlurDown', '\\phrasingSlurNeutral',
      '\\autoBeamOn', '\\autoBeamOff',
    ),

    // Voice Commands

    voice_command: $ => choice(
      '\\voiceOne', '\\voiceTwo', '\\voiceThree', '\\voiceFour',
      '\\oneVoice',
    ),

    break_command: $ => choice(
      '\\break', '\\pageBreak', '\\noBreak',
    ),

    breathe: $ => '\\breathe',

    ottava: $ => seq(
      '\\ottava',
      $.embedded_scm,
    ),

    arpeggio: $ => '\\arpeggio',
    glissando: $ => '\\glissando',

    cadenza_command: $ => choice(
      '\\cadenzaOn', '\\cadenzaOff',
    ),

    once: $ => seq(
      '\\once',
      $.property_expression,
    ),

    // Music

    music: $ => seq(
      '{',
      repeat($._music_expression),
      '}',
    ),

    simultaneous_music: $ => seq(
      '<<',
      repeat(choice(
        $._music_expression,
        $.voice_separator,
      )),
      '>>',
    ),

    voice_separator: $ => '\\\\',

    // Context

    _contextable_music: $ => choice(
      $.music,
      $.simultaneous_music,
      $.context_expression,
      $.repeat_expression,
      $.music_function,
      $.grace,
      $.acciaccatura,
      $.appoggiatura,
      $.tuplet,
      $.times,
    ),

    property_expression: $ => choice(
      $.override_expression,
      $.set_expression,
      $.revert_expression,
      $.unset_expression,
    ),

    override_expression: $ => seq(
      '\\override',
      $.property_path,
      '=',
      $._scalar,
    ),

    property_path: $ => seq(
      $.symbol,
      repeat(seq('.', $.symbol)),
    ),

    _scalar: $ => choice(
      $.string,
      $.number_expression,
      $.embedded_scm,
    ),

    // Repeat

    _music_expression: $ => choice(
      $.note,
      $.rest,
      $.skip,
      $.chord,
      $.music,
      $.simultaneous_music,
      $.context_expression,
      $.property_expression,
      $.repeat_expression,
      $.music_function,
      $.addlyrics,
      $.lyricsto,
      $.markup,
      // M7: Music Commands
      $.time_signature,
      $.key_signature,
      $.clef,
      $.partial,
      $.grace,
      $.acciaccatura,
      $.appoggiatura,
      $.tuplet,
      $.times,
      $.bar_check,
      $.tempo,
      $.segno,
      $.coda,
      $.fine,
      $.mark,
      $.direction_command,
      $.voice_command,
      $.change,
      $.break_command,
      $.breathe,
      $.ottava,
      $.cadenza_command,
      $.once,
      $.comment,
    ),

    // Notes, rests, skips, chords

    note: $ => seq(
      $.pitch,
      optional($.duration),
      repeat($.post_event),
    ),

    chord: $ => seq(
      '<',
      repeat1($.chord_element),
      '>',
      optional($.duration),
      repeat($.post_event),
    ),

    chord_element: $ => $.pitch,

    // Post-events

    post_event: $ => choice(
      $.tie,
      $.slur_open,
      $.slur_close,
      $.phrasing_slur_open,
      $.phrasing_slur_close,
      $.beam_open,
      $.beam_close,
      $.articulation,
      $.dynamic,
      $.fingering,
      $.arpeggio,
      $.glissando,
    ),

    slur_open: $ => '(',
    slur_close: $ => ')',
    phrasing_slur_open: $ => '\\(',
    phrasing_slur_close: $ => '\\)',
    pitch: $ => seq(
      $.pitch_name,
      optional($.accidental),
      optional($.octave),
    ),

    pitch_name: $ => /[a-g]/,

    duration: $ => seq(
      $.duration_value,
      optional($.dots),
      repeat($.multiplier),
    ),

    duration_value: $ => choice(
      '\\breve',
      '\\longa',
      '\\maxima',
      /[0-9]+/,
    ),
