test/corpus/header.txt
=================
header block
=================
\header {
  title = "SUITE I."
  composer = "J. S. Bach."
}

---
(lilypond
  (header_block
    (assignment (assignment_id (symbol)) (string))
    (assignment (assignment_id (symbol)) (string))))

=================
multi header block
=================
\header {
  title = "SUITE I."
  composer = "J. S. Bach."
}
\header {
  texidoc = "A second top-level header block."
  piece = "Piece correct"
  title = "Title incorrect"
}

---
(lilypond
  (header_block
    (assignment (assignment_id (symbol)) (string))
    (assignment (assignment_id (symbol)) (string)))
  (header_block
    (assignment (assignment_id (symbol)) (string))
    (assignment (assignment_id (symbol)) (string))
    (assignment (assignment_id (symbol)) (string))))

===================
header with comment
===================
\version "2.16.0"
\header {
  texidoc = "A header block."
  piece = "Piece correct"
  title = "Title incorrect"
}

\header {
  % this should not overwrite the piece from above!
  title = "title correct"
}

---
(lilypond
  (version_statement (version_number))
  (header_block
    (assignment (assignment_id (symbol)) (string))
    (assignment (assignment_id (symbol)) (string))
    (assignment (assignment_id (symbol)) (string)))
  (header_block
    (comment (line_comment))
    (assignment (assignment_id (symbol)) (string))))
